--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>An AI video maker is a type of software that uses artificial intelligence to automatically generate videos.&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p> <a href="index.HTML">Return to first page</a> </p>
+<p> <a href="1.HTML">Return to first page</a> </p>
 <p><a href=".html">Return to second page</a>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
